More info on attachments. PR: Obtained from: Submitted by: Reviewed by:
git-svn-id: https://svn.apache.org/repos/asf/webservices/axis1/branches/alpha-3@246040 13f79535-47bb-0310-9956-ffa450edef68

--- a/java/release-notes.html
+++ b/java/release-notes.html
@@ -59,7 +59,7 @@ missing features include:</p>
   <li>Many enhancement for the <a href="docs/user-guide.html#WSDL2JavaReference">wsdl2java</a> JAX-RPC compliant
   emitter.</li>
   <li>Deployment syntax now finalized using <a href="docs/user-guide.html#DeploymentReference">WSDD</a> files.</li>
-  <li>Preliminary support for SOAP with <A href="docs/user-guide.html#AttachmentsReference">attachments</a>.</li>
+  <li>Preliminary support for <A href="docs/user-guide.html#AttachmentsReference">SOAP Messages with Attachments</a>.</li>
   <li>Many minor bug fixes.</li>
 </ul>
 </body>
